# fnt4-tool

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: config.toml  create-mapping.py
src/: crc32.rs  extract.rs  fnt.rs  glyph.rs  lz77.rs  main.rs  metadata.rs  rebuild.rs  repack.rs  texture.rs  types.rs  utils.rs
