[package]
name = "fnt4-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
rayon = "1.10"
ab_glyph = "0.2.32"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
encoding_rs = "0.8.35"

[profile.release]
opt-level = 3
lto = true
